--- a/index.html
+++ b/index.html
@@ -3,21 +3,10 @@
     <head>
         <meta http-equiv="content-type" content="text/html;charset=utf-8" />
         <title></title>
-        <link rel="stylesheet" type="text/css" href="#">
-        <script type="text/javascript" src="#"></script>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
-    <style>
-        canvas{
-            border: solid 1px;
-            position: absolute;
-            margin-right: 50%;
-            margin-left: 50%;
-            left: -300px;
-            top: 30px;
-        }
-    </style>
     <body>
-        <p>Directory access is forbidden.</p>
-
+        <canvas width="600" height="600"></canvas>
+        <script type="text/javascript" src="main.js"></script>
     </body>
 </html>
